--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 /*
 Theme Name: Supportte
-Theme URI: http://aquagraphite.com
+Theme URI: https://github.com/svl-studios/supportte
 Description: Support Theme for Envato Marketplace Authors - Modified from TwentyTen theme.
-Author: Syamil MJ
-Author URI: http://aquagraphite.com
-Version: 1.1.0
+Author: Syamil MJ, kprovance
+Author URI: http://www.svlstudios.com
+Version: 1.2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: black, blue, white, two-columns, fixed-width, custom-header, custom-background, threaded-comments, sticky-post, translation-ready, microformats, rtl-language-support, editor-style, custom-menu, bbpress
 Text Domain: twentyten
 */
-
 
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
 -------------------------------------------------------------- */
